--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <header>
 
     <nav class="navbar navbar-expand-lg navbar-dark indigo fixed-top">
-        <a class="navbar-brand" href="#">Navigation</a>
+        <a class="navbar-brand" href="#">Navi</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -90,6 +90,182 @@
 
 <!--Main layout-->
 <main>
+
+  <!--Main layout-->
+  <main class="text-center">
+      <div class="container">
+
+          <h2 class="h2-responsive my-5">About us</h2>
+
+            <!--Section: About-->
+            <section id="about" class="text-center">
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed eaque ipsum totam quisquam eum tenetur perferendis rem incidunt sapiente perspiciatis tempora, aliquam, eius autem nisi quas, cumque distinctio saepe ab.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed eaque ipsum totam quisquam eum tenetur perferendis rem incidunt sapiente perspiciatis tempora, aliquam, eius autem nisi quas, cumque distinctio saepe ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed eaque ipsum totam quisquam eum tenetur perferendis rem incidunt sapiente perspiciatis tempora, aliquam, eius autem nisi quas, cumque distinctio saepe ab.</p>
+
+            </section>
+            <!--Section: About-->
+
+          <h2 class="h2-responsive my-5">Best features</h2>
+
+          <!--Section: Best features-->
+<section id="best-features">
+
+    <div class="row">
+
+        <!--First columnn-->
+        <div class="col-md-3">
+          <!--Card-->
+        <div class="card hoverable">
+
+                <!--Card image-->
+                <div class="view overlay hm-white-slight">
+                    <img src="https://mdbootstrap.com/images/regular/city/img%20(2).jpg" class="img-fluid" alt="">
+                    <a>
+                        <div class="mask"></div>
+                    </a>
+                </div>
+                <!--/.Card image-->
+
+                <!--Card content-->
+                <div class="card-body">
+                    <!--Title-->
+                    <h4 class="card-title">Card title</h4>
+                    <hr>
+                    <!--Text-->
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident fuga animi architecto
+                        dolores dicta cum quo velit.</p>
+                </div>
+                <!--/.Card content-->
+
+            </div>
+            <!--/.Card-->
+
+        </div>
+        <!--First columnn-->
+
+        <!--Second columnn-->
+        <div class="col-md-3">
+            <!--Card-->
+        <div class="card hoverable">
+
+                <!--Card image-->
+                <div class="view overlay hm-white-slight">
+                    <img src="https://mdbootstrap.com/images/regular/city/img%20(3).jpg" class="img-fluid" alt="">
+                    <a>
+                        <div class="mask"></div>
+                    </a>
+                </div>
+                <!--/.Card image-->
+
+                <!--Card content-->
+                <div class="card-body">
+                    <!--Title-->
+                    <h4 class="card-title">Card title</h4>
+                    <hr>
+                    <!--Text-->
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident fuga animi architecto
+                        dolores dicta cum quo velit.</p>
+                </div>
+                <!--/.Card content-->
+
+            </div>
+            <!--/.Card-->
+
+        </div>
+        <!--Second columnn-->
+
+        <!--Third columnn-->
+        <div class="col-md-3">
+
+            <!--Card-->
+        <div class="card hoverable">
+
+                <!--Card image-->
+                <div class="view overlay hm-white-slight">
+                    <img src="https://mdbootstrap.com/images/regular/city/img%20(4).jpg" class="img-fluid" alt="">
+                    <a>
+                        <div class="mask"></div>
+                    </a>
+                </div>
+                <!--/.Card image-->
+
+                <!--Card content-->
+                <div class="card-body">
+                    <!--Title-->
+                    <h4 class="card-title">Card title</h4>
+                    <hr>
+                    <!--Text-->
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident fuga animi architecto
+                        dolores dicta cum quo velit.</p>
+                </div>
+                <!--/.Card content-->
+
+            </div>
+            <!--/.Card-->
+
+        </div>
+        <!--Third columnn-->
+
+        <!--Fourth columnn-->
+        <div class="col-md-3">
+          <!--Card-->
+        <div class="card hoverable">
+
+                <!--Card image-->
+                <div class="view overlay hm-white-slight">
+                    <img src="https://mdbootstrap.com/images/regular/city/img%20(5).jpg" class="img-fluid" alt="">
+                    <a>
+                        <div class="mask"></div>
+                    </a>
+                </div>
+                <!--/.Card image-->
+
+                <!--Card content-->
+                <div class="card-body">
+                    <!--Title-->
+                    <h4 class="card-title">Card title</h4>
+                    <hr>
+                    <!--Text-->
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident fuga animi architecto
+                        dolores dicta cum quo velit.</p>
+                </div>
+                <!--/.Card content-->
+
+            </div>
+            <!--/.Card-->
+
+        </div>
+        <!--Fourth columnn-->
+    </div>
+
+</section>
+<!--/Section: Best features-->
+
+
+          <h2 class="h2-responsive my-5">Contact us</h2>
+
+          <!--Section: Contact-->
+          <section id="contact">
+              <div class="row">
+                  <!--First column-->
+                  <div class="col-md-8">
+
+                  </div>
+                  <!--/First column-->
+
+                  <!--Second column-->
+                  <div class="col-md-4">
+
+                  </div>
+                  <!--/Second column-->
+              </div>
+          </section>
+          <!--Section: Contact-->
+
+      </div>
+  </main>
+  <!--Main layout-->
 
 </main>
 <!--Main layout-->
