--- a/index.html
+++ b/index.html
@@ -251,11 +251,30 @@
                   <!--First column-->
                   <div class="col-md-8">
 
+                        <!--Map container-->
+                        <div id="map-container" class="z-depth-1" style="height: 300px"></div>
+
                   </div>
                   <!--/First column-->
 
                   <!--Second column-->
                   <div class="col-md-4">
+                    <ul>
+
+<ul class="list-unstyled">
+    <li class="mb-4"><i class="fa fa-2x mb-3 fa-map-marker"></i>
+        <p>Weidenhain 28, 34621 Frielendorf</p>
+    </li>
+
+    <li class="mb-4"><i class="fa fa-2x mb-3 fa-phone"></i>
+      <p>+49 (0)2159 - 51143</p>
+      <p>+49 (0)179 - 6084649</p>
+    </li>
+
+    <li class="mb-4"><i class="fa fa-2x mb-3 fa-envelope"></i>
+        <p>E-Mail</p>
+    </li>
+</ul>
 
                   </div>
                   <!--/Second column-->
@@ -285,6 +304,34 @@
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
+
+    <!--Google Maps-->
+    <script src="https://maps.google.com/maps/api/js"></script>
+    <!--Google Maps Settings-->
+ <script>
+        function init_map() {
+            var var_location = new google.maps.LatLng(50.976926, 9.343902);
+
+            var var_mapoptions = {
+                center: var_location,
+                zoom: 14
+            };
+
+            var var_marker = new google.maps.Marker({
+                position: var_location,
+                map: var_map,
+                title: "New York"
+            });
+
+            var var_map = new google.maps.Map(document.getElementById("map-container"),
+                var_mapoptions);
+
+            var_marker.setMap(var_map);
+
+        }
+
+        google.maps.event.addDomListener(window, 'load', init_map);
+ </script>
 </body>
 
 </html>
