--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </nav>
 
 <!--Mask-->
-    <div class="view hm-black-strong">
+    <div class="view hm-black-slight">
     <div class="full-bg-img flex-center">
         <ul>
             <li>
