--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
                 <!--Card image-->
                 <div class="view overlay hm-white-slight">
-                    <img src="P1060750.JPG" class="img-fluid" alt="">
+                    <img src="img/house/P1060750-1920.JPG" class="img-fluid" alt="">
                     <a>
                         <div class="mask"></div>
                     </a>
@@ -151,7 +151,7 @@
 
                 <!--Card image-->
                 <div class="view overlay hm-white-slight">
-                    <img src="P1060633.JPG" class="img-fluid" alt="">
+                    <img src="img/house/P1060633-1920.JPG" class="img-fluid" alt="">
                     <a>
                         <div class="mask"></div>
                     </a>
@@ -183,7 +183,7 @@
 
                 <!--Card image-->
                 <div class="view overlay hm-white-slight">
-                    <img src="P1060656.JPG" class="img-fluid" alt="">
+                    <img src="img/house/P1060656-1920.JPG" class="img-fluid" alt="">
                     <a>
                         <div class="mask"></div>
                     </a>
@@ -214,7 +214,7 @@
 
                 <!--Card image-->
                 <div class="view overlay hm-white-slight">
-                    <img src="P1060658.JPG" class="img-fluid" alt="">
+                    <img src="img/house/P1060658-1920.JPG" class="img-fluid" alt="">
                     <a>
                         <div class="mask"></div>
                     </a>
