--- a/index.html
+++ b/index.html
@@ -272,9 +272,7 @@
     </li>
 
     <li class="mb-4"><i class="fa fa-2x mb-3 fa-envelope"></i>
-        <p>E-Mail</p>
-    </li>
-</ul>
+    <p>ferienhaus.28.am.silbersee@gmail.com</p> </li> </ul>
 
                   </div>
                   <!--/Second column-->
@@ -320,7 +318,7 @@
             var var_marker = new google.maps.Marker({
                 position: var_location,
                 map: var_map,
-                title: "New York"
+                title: "Friendorf"
             });
 
             var var_map = new google.maps.Map(document.getElementById("map-container"),
