changed li and ul

--- a/index.html
+++ b/index.html
@@ -272,7 +272,9 @@
     </li>
 
     <li class="mb-4"><i class="fa fa-2x mb-3 fa-envelope"></i>
-    <p>ferienhaus.28.am.silbersee@gmail.com</p> </li> </ul>
+    <p>ferienhaus.28.am.silbersee@gmail.com</p>
+  </li>
+</ul>
 
                   </div>
                   <!--/Second column-->
