added key for maps
adde google key for maps

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     <script type="text/javascript" src="js/mdb.min.js"></script>
 
     <!--Google Maps-->
-    <script src="https://maps.google.com/maps/api/js"></script>
+    <script src="https://maps.google.com/maps/api/js?key=AIzaSyCieJ-3ry9BVAB_g47LwXY5Q1GoFaHksgw&callback=initMap"></script>
     <!--Google Maps Settings-->
  <script>
         function init_map() {
