--- a/location.html
+++ b/location.html
@@ -73,10 +73,7 @@
             <li>
                 <p>Entspannung, Spaß und Freizeitvergn&uuml;gen.</p>
             </li>
-            <li>
-                <a href="" class="btn btn-primary btn-lg">Sign up!</a>
-                <a href="" class="btn btn-default btn-lg">Learn more</a>
-            </li>
+
         </ul>
     </div>
 </div>
@@ -91,8 +88,25 @@
 <!--Main layout-->
 <main>
 
+  <!--Main layout-->
+  <main class="text-center">
+      <div class="container">
+
+          <h2 class="h2-responsive my-5">About us</h2>
+
+            <!--Section: About-->
+            <section id="about" class="text-center">
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed eaque ipsum totam quisquam eum tenetur perferendis rem incidunt sapiente perspiciatis tempora, aliquam, eius autem nisi quas, cumque distinctio saepe ab.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed eaque ipsum totam quisquam eum tenetur perferendis rem incidunt sapiente perspiciatis tempora, aliquam, eius autem nisi quas, cumque distinctio saepe ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed eaque ipsum totam quisquam eum tenetur perferendis rem incidunt sapiente perspiciatis tempora, aliquam, eius autem nisi quas, cumque distinctio saepe ab.</p>
+
+            </section>
+            <!--Section: About-->
+
+
 </main>
 <!--Main layout-->
+
 
 <!--Footer-->
 <footer>
