--- a/imprint.html
+++ b/imprint.html
@@ -61,7 +61,7 @@
     </nav>
 
 <!--Mask-->
-    <div class="view hm-black-strong">
+    <div class="view hm-black-slight">
     <div class="full-bg-img flex-center">
         <ul>
             <li>
