fixed settings added privacy

--- a/booking.html
+++ b/booking.html
@@ -84,8 +84,25 @@
 <!--Main layout-->
 <main>
 
+  <!--Main layout-->
+  <main class="text-center">
+      <div class="container">
+
+          <h2 class="h2-responsive my-5">Buchung</h2>
+
+            <!--Section: About-->
+            <section id="about" class="text-center">
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed eaque ipsum totam quisquam eum tenetur perferendis rem incidunt sapiente perspiciatis tempora, aliquam, eius autem nisi quas, cumque distinctio saepe ab.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed eaque ipsum totam quisquam eum tenetur perferendis rem incidunt sapiente perspiciatis tempora, aliquam, eius autem nisi quas, cumque distinctio saepe ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed eaque ipsum totam quisquam eum tenetur perferendis rem incidunt sapiente perspiciatis tempora, aliquam, eius autem nisi quas, cumque distinctio saepe ab.</p>
+
+            </section>
+            <!--Section: About-->
+
+</div>
 </main>
 <!--Main layout-->
+
 
 <!--Footer-->
 <footer>
