--- a/location.html
+++ b/location.html
@@ -89,7 +89,7 @@
   <main class="text-center">
       <div class="container">
 
-          <h2 class="h2-responsive my-5">About us</h2>
+          <h2 class="h2-responsive my-5">Anfahrt</h2>
 
             <!--Section: About-->
             <section id="about" class="text-center">
