--- a/location.html
+++ b/location.html
@@ -31,7 +31,7 @@
 <header>
 
     <nav class="navbar navbar-expand-lg navbar-dark indigo fixed-top">
-        <a class="navbar-brand" href="#">Ferienhaus 28<br>Frielendorf</a>
+        <a class="navbar-brand" href="index.html">Ferienhaus 28<br>Frielendorf</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
