--- a/area.html
+++ b/area.html
@@ -31,6 +31,7 @@
 <header>
 
     <nav class="navbar navbar-expand-lg navbar-dark indigo fixed-top">
+        <div class="container">
         <a class="navbar-brand" href="index.html">Ferienhaus 28<br>Frielendorf</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -57,6 +58,7 @@
 
 
             </ul>
+        </div>
         </div>
     </nav>
 
