--- a/imprint.html
+++ b/imprint.html
@@ -95,9 +95,30 @@
             <!--Section: About-->
             <section id="about" class="text-center">
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed eaque ipsum totam quisquam eum tenetur perferendis rem incidunt sapiente perspiciatis tempora, aliquam, eius autem nisi quas, cumque distinctio saepe ab.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed eaque ipsum totam quisquam eum tenetur perferendis rem incidunt sapiente perspiciatis tempora, aliquam, eius autem nisi quas, cumque distinctio saepe ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed eaque ipsum totam quisquam eum tenetur perferendis rem incidunt sapiente perspiciatis tempora, aliquam, eius autem nisi quas, cumque distinctio saepe ab.</p>
-
+         <p>    
+Anbieter:</p><p>
+Brigitte George-Neikes
+          </p><p>
+Josef-Werres-Straße 78
+          </p><p>
+40668 Meerbusch
+          </p><p>
+Kontakt
+         </p><p>       
+Telefon: 02159-51143
+              </p><p>  
+E-Mail:
+         </p><p>       
+Redaktion:
+          </p><p>      
+Julia Neikes
+            </p><p>    
+Josef-Werres-Straße 78
+       </p><p>         
+40668 Meerbusch
+        </p><p>        
+Technische Umsetzung Jörg Neikes</p><p>
+Hosting und Betrieb  Jörg Neikes</p>
             </section>
             <!--Section: About-->
 
