--- a/imprint.html
+++ b/imprint.html
@@ -95,7 +95,7 @@
             <!--Section: About-->
             <section id="about" class="text-center">
 
-         <p>    
+         <p>  
 Anbieter:</p><p>
 Brigitte George-Neikes
           </p><p>
@@ -109,16 +109,14 @@ Telefon: 02159-51143
               </p><p>  
 E-Mail:
          </p><p>       
-Redaktion:
+Inhaltlich Verantwortlich:
           </p><p>      
 Julia Neikes
             </p><p>    
 Josef-Werres-Straße 78
        </p><p>         
 40668 Meerbusch
-        </p><p>        
-Technische Umsetzung Jörg Neikes</p><p>
-Hosting und Betrieb  Jörg Neikes</p>
+        </p>
             </section>
             <!--Section: About-->
 
