--- a/imprint.html
+++ b/imprint.html
@@ -96,27 +96,21 @@
             <section id="about" class="text-center">
 
          <p>  
-Anbieter:</p><p>
-Brigitte George-Neikes
-          </p><p>
-Josef-Werres-Straße 78
-          </p><p>
-40668 Meerbusch
-          </p><p>
-Kontakt
-         </p><p>       
-Telefon: 02159-51143
-              </p><p>  
-E-Mail:
-         </p><p>       
+Anbieter: <br>
+Brigitte George-Neikes<br>
+             <br>
+Josef-Werres-Straße 78<br>
+40668 Meerbusch<br>
+<br>
+Kontakt<br>
+     <br>
+Telefon: 02159-51143 <br>
+E-Mail: mailto:ferienhaus.28.am.silbersee@gmail.com</p>
+         <p>       
 Inhaltlich Verantwortlich:
-          </p><p>      
-Julia Neikes
-            </p><p>    
-Josef-Werres-Straße 78
-       </p><p>         
-40668 Meerbusch
-        </p>
+               
+Julia Neikes,  Adresse wie oben
+            </p>  
             </section>
             <!--Section: About-->
 
