--- a/imprint.html
+++ b/imprint.html
@@ -63,27 +63,14 @@
     </nav>
 
 <!--Mask-->
-    <div class="view hm-black-slight">
+    <div class="view hm-black-strong">
     <div class="full-bg-img flex-center">
         <ul>
             <li>
                 <h1 class="h1-responsive">Ferienhaus 28 am Silbersee</h1>
             </li>
             <li>
-                <p>Entspannung, Spaß und Freizeitvergn&uuml;gen.</p>
-            </li>
-        </ul>
-    </div>
-</div>
-<!--/.Mask-->
-
-</header>
-<!--Main Navigation-->
-
-</header>
-<!--Main Navigation-->
-
-<!--Main layout-->
+                <!--Main layout-->
 <main>
 
   <!--Main layout-->
@@ -105,7 +92,7 @@ Josef-Werres-Straße 78<br>
 Kontakt<br>
      <br>
 Telefon: 02159-51143 <br>
-E-Mail: mailto:ferienhaus.28.am.silbersee@gmail.com</p>
+E-Mail: ferienhaus.28.am.silbersee@gmail.com</p>
          <p>       
 Inhaltlich Verantwortlich:
                
@@ -115,6 +102,23 @@ Julia Neikes,  Adresse wie oben
             <!--Section: About-->
 
 </div>
+</main>
+<!--Main layout-->
+            </li>
+        </ul>
+    </div>
+</div>
+<!--/.Mask-->
+
+</header>
+<!--Main Navigation-->
+
+</header>
+<!--Main Navigation-->
+
+<!--Main layout-->
+<main>
+
 </main>
 <!--Main layout-->
 
