--- a/imprint.html
+++ b/imprint.html
@@ -67,7 +67,7 @@
     <div class="full-bg-img flex-center">
         <ul>
             <li>
-                <h1 class="h1-responsive">Ferienhaus 28 am Silbersee</h1>
+                <h1 class="h1-responsive">Impressum</h1>
             </li>
             <li>
                 <!--Main layout-->
@@ -77,25 +77,19 @@
   <main class="text-center">
       <div class="container">
 
-          <h2 class="h2-responsive my-5">Impressum</h2>
-
             <!--Section: About-->
             <section id="about" class="text-center">
 
-         <p>  
-Anbieter: <br>
+         <p class="text-warning">Anbieter: <br><br>
 Brigitte George-Neikes<br>
-             <br>
 Josef-Werres-Straße 78<br>
 40668 Meerbusch<br>
 <br>
-Kontakt<br>
-     <br>
+Kontakt:<br><br>
 Telefon: 02159-51143 <br>
-E-Mail: ferienhaus.28.am.silbersee@gmail.com</p>
-         <p>       
-Inhaltlich Verantwortlich:
-               
+E-Mail: ferienhaus.28.am.silbersee@gmail.com</p><br><br>
+                
+         <p class="text-warning">Inhaltlich Verantwortlich:<br><br>
 Julia Neikes,  Adresse wie oben
             </p>  
             </section>
