changed imprint and fixed privacz

--- a/privacy.html
+++ b/privacy.html
@@ -62,21 +62,6 @@
         </div>
     </nav>
 
-<!--Mask-->
-    <div class="view hm-black-slight">
-    <div class="full-bg-img flex-center">
-        <ul>
-            <li>
-                <h1 class="h1-responsive">Ferienhaus 28 am Silbersee</h1>
-            </li>
-            <li>
-                <p>Entspannung, Spaß und Freizeitvergn&uuml;gen.</p>
-            </li>
-        </ul>
-    </div>
-</div>
-<!--/.Mask-->
-
 </header>
 <!--Main Navigation-->
 
@@ -95,7 +80,7 @@
             <!--Section: About-->
             <section id="about" class="text-center">
 
-<p><strong>Geltungsbereich</strong></p><p>Diese Datenschutzerklärung klärt Nutzer über die Art, den Umfang und Zwecke der Erhebung und Verwendung personenbezogener Daten durch den verantwortlichen Anbieter Brigitte George-Neikes, Josef-Werres-Straße 78, 40668 Meerbusch, ferienhaus.28.am.silbersee@gmail.com, (+49)0215951143 auf dieser Website (im folgenden “Angebot”) auf.<br />
+<p><strong>Geltungsbereich</strong></p><p>Diese Datenschutzerklärung klärt Nutzer über die Art, den Umfang und Zwecke der Erhebung und Verwendung personenbezogener Daten durch den verantwortlichen Anbieter Brigitte George-Neikes, Josef-Werres-Straße 78, 40668 Meerbusch, ferienhaus.28.am.silbersee@gmail.com, +49 (0)2159 - 51143 auf dieser Website (im folgenden “Angebot”) auf.<br />
 <br />
 Die rechtlichen Grundlagen des Datenschutzes finden sich im Bundesdatenschutzgesetz (BDSG) und dem Telemediengesetz (TMG).<br />
 <br />
