--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
                     <a class="nav-link" href="booking.html">Buchen</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="location.html">Anfahrt</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="area.html">Umgebung</a>
                 </li>
                 <li class="nav-item">
@@ -237,7 +234,23 @@
 </section>
 <!--/Section: Best features-->
 
+  <!--Section location-->
+          <h2 class="h2-responsive my-5">Anfahrt</h2>
 
+            
+            <section id="location" class="text-center">
+
+<p>Das Ferienhaus befindet sich in einem reinen Ferienwohnpark im schönen Kurhessischen-Bergland, die Heimat der Gebrüder Grimm. 
+Der Ferienwohnpark liegt direkt an einem der saubersten Badeseen in Hessen.</p>
+<p>Kraftfahrzeuge dürfen den Ferienwohnpark nur eingeschränkt befahren, lediglich zum Be- und/oder Entladen ist es gestattet mit dem Auto bis zum Ferienhaus zu fahren. 
+Parkplätze stehen für ihr Fahrzeug aber im Park in ausreichender Anzahl zur Verfügung.</p>
+
+            </section>
+            <!--Section: location-->
+
+</div>
+</main>
+<!--Main layout-->
           <h2 class="h2-responsive my-5">Contact us</h2>
 
           <!--Section: Contact-->
