--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
                     <a class="nav-link" href="booking.html">Buchen</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="area.html">Umgebung</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="privacy.html">Datenschutz</a>
                 </li>
                 <li class="nav-item">
@@ -234,6 +231,27 @@
 </section>
 <!--/Section: Best features-->
 
+          <!--Section area-->
+                    <h2 class="h2-responsive my-5">Die Umgebung</h2>
+
+            <section id="area" class="text-center">
+                <p>Das Ferienhaus befindet sich in dem Ferienwohnpark Silbersee, mitten in Deutschland, nur 40 Autominuten südlich von Kassel. 
+Über die A 7, Ausfahrt Homberg (Efze), fährt man weiter über die B 323 und die B 254 bis zur Abfahrt Frielendorf Nord und erreicht 
+das Feriendorf nach 1 km, welches an dem ca. 10.000 m² großen Badesee gelegen ist. Das Feriendorf ist von weitreichenden 
+Wäldern umgeben, die idealerweise zum Wandern und Mountainbiking einladen. Im Park findet sich eine Reihe von Freizeitmöglichkeiten 
+wie z. B. ein moderner Kletterpark, ein großes Indoorspielparadies, ein Wellness Paradies (Hallenbad), Miniatureisenbahn, 
+Allwetterrodelbahn, Streichelzoo, Bogenschießen, Minigolf, Skater- und Bocciabahn, Fußball-, Tennis und Basketballfelder, Abenteuerspielplätze u.v.m.</p>
+
+<p>Einkaufsmöglichkeiten finden Sie im Dorfladen und in Frielendorf (1,5 km). In der Umgebung gibt es viele Ausflugsziele. 
+Die Kreisstadt Homberg/Efze mit Burg und historischer Altstadt (ca. 10 km), den Wildpark Knüll (ca. 10 km), Schwalmstadt mit 
+seinen historischen und befestigten Altstadtkernen (ca. 12 km), Surf- und Tauchsport am Singliser See (ca. 12 km), das Borkener 
+Bergbaumuseum (ca. 15 km), den Naturpark Kellerwald (ca. 25-30 km), Kassel, die Dokumenta- und Hessentagsstadt 2013 (ca. 50 km), 
+oder den Edersee an der Edertalsperre (ca. 60 km).</p>
+
+            </section>
+          <!--Section area-->
+          
+          
   <!--Section location-->
           <h2 class="h2-responsive my-5">Anfahrt</h2>
 
