changed all sites and added area related content

--- a/index.html
+++ b/index.html
@@ -247,6 +247,18 @@ Die Kreisstadt Homberg/Efze mit Burg und historischer Altstadt (ca. 10 km), den 
 seinen historischen und befestigten Altstadtkernen (ca. 12 km), Surf- und Tauchsport am Singliser See (ca. 12 km), das Borkener 
 Bergbaumuseum (ca. 15 km), den Naturpark Kellerwald (ca. 25-30 km), Kassel, die Dokumenta- und Hessentagsstadt 2013 (ca. 50 km), 
 oder den Edersee an der Edertalsperre (ca. 60 km).</p>
+                
+<p>Entfernungen für folgendes:</p>
+<p>
+ Bars/ Clubs/ Ausgehen ca. 500 m<br>
+ Bahnhof ca. 12 km<br>
+ Lebensmittelhandel ca. 300 m<br>
+ nächste Haltestelle ÖPNV ca. 1,2 km<br>
+ Cafés/ Restaurants ca. 500 m<br>
+ Sandstrand ca. 150 m<br>
+ Schwimmbad ca. 800 m<br>
+ Skilanglauf ca. 12 km</p>
+
 
             </section>
           <!--Section area-->
@@ -269,7 +281,7 @@ Parkplätze stehen für ihr Fahrzeug aber im Park in ausreichender Anzahl zur Ve
 </div>
 </main>
 <!--Main layout-->
-          <h2 class="h2-responsive my-5">Contact us</h2>
+          <h2 class="h2-responsive my-5">Kontakt und Ferienhaus Adresse</h2>
 
           <!--Section: Contact-->
           <section id="contact">
