changed Text style and added index content

--- a/index.html
+++ b/index.html
@@ -84,20 +84,37 @@
   <main class="text-center">
       <div class="container">
 
-          <h2 class="h2-responsive my-5">About us</h2>
+          <h2 class="h2-responsive my-5">Herzlich Willkommen auf der Webseite zum Haus 28 vom Silbersee.</h2>
 
-            <!--Section: About-->
-            <section id="about" class="text-center">
+            <!--Section: House-->
+            <section id="house" class="text-center">
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed eaque ipsum totam quisquam eum tenetur perferendis rem incidunt sapiente perspiciatis tempora, aliquam, eius autem nisi quas, cumque distinctio saepe ab.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed eaque ipsum totam quisquam eum tenetur perferendis rem incidunt sapiente perspiciatis tempora, aliquam, eius autem nisi quas, cumque distinctio saepe ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed eaque ipsum totam quisquam eum tenetur perferendis rem incidunt sapiente perspiciatis tempora, aliquam, eius autem nisi quas, cumque distinctio saepe ab.</p>
+                <p>Herzlich Willkommen auf der Webseite zum Haus 28 vom Silbersee.</p>
 
-            </section>
-            <!--Section: About-->
+<p>Wenn sie ihre Seele baumeln lassen möchten, etwas neue Energie tanken oder sich sportlich betätigen wollen, dann sind Sie hier genau richtig.</p>
+
+<p>Das Ferienhaus 28 liegt in dem Ferienpark Silbersee. Es befindet sich ca. 150 Meter vom See entfernt.</p>
+
+ <p>Das Ferienhaus ist mit höchstens 6 Personen buchbar.</p>
+ <p>Es gibt 3 Schlafzimmer: 2 mit Doppelbett (je 1,80m Breite), 1 mit zwei Einzelbetten</p>
+ <p>Es gibt 1 Badezimmer und ein seperates WC im direkten Anschluss zu einem Schlafzimmer.</p>
+ 
+ 
+ <p>Bettwäsche und Handtücher sind mitzubringen.</p>
+ <p>Einen Kinderhochstuhl und ein Kinderreisebett sind auf Anfrage vor Ort.</p>
+ 
+ <p>Für Rollstuhlfahrer und  Jugendgruppen ist das Haus nicht geeignet!</p>
+
+ <p>Es handelt sich um Nichtraucherobjekt in dem Haustiere nicht erlaubt sind.</p>
+
+<p>Für weitere Informationen zur Ausstattung bitte hier klicken Buchungen</p>
+
+          </section>
+            <!--Section: House-->
 
           <h2 class="h2-responsive my-5">Best features</h2>
 
-          <!--Section: Best features-->
+          <!--Section: Pictures-->
 <section id="best-features">
 
     <div class="row">
@@ -229,7 +246,7 @@
     </div>
 
 </section>
-<!--/Section: Best features-->
+<!--/Section: Pictures-->
 
           <!--Section area-->
                     <h2 class="h2-responsive my-5">Die Umgebung</h2>
