--- a/index.html
+++ b/index.html
@@ -293,9 +293,6 @@ Parkplätze stehen für ihr Fahrzeug aber im Park in ausreichender Anzahl zur Ve
             </section>
             <!--Section: location-->
 
-</div>
-</main>
-<!--Main layout-->
           <h2 class="h2-responsive my-5">Kontakt und Ferienhaus Adresse</h2>
 
           <!--Section: Contact-->
@@ -335,13 +332,16 @@ Parkplätze stehen für ihr Fahrzeug aber im Park in ausreichender Anzahl zur Ve
               </div>
           </section>
           <!--Section: Contact-->
+          
+          
+</div>
 
-      </div>
-  </main>
+
+
+  </main></main>
   <!--Main layout-->
 
-</main>
-<!--Main layout-->
+
 
 <!--Footer-->
 <footer>
