--- a/privacy.html
+++ b/privacy.html
@@ -57,11 +57,11 @@
     </nav>
 
 <!--Mask-->
-    <div class="view2 hm-black-strong">
+    <div class="view hm-black-strong">
     <div class="full-bg-img flex-center">
         <ul>
             <li>
-                <h1 class="h1-responsive etsterartikel">Datenschutzerklärung</h1>
+                <h1 class="h1-responsive ersterartikel">Datenschutzerklärung</h1>
             </li>
             <li>
                 <p class="text-warning"><h5>Geltungsbereich</h5></p><p class="text-warning">Diese Datenschutzerklärung klärt Nutzer über die Art, den Umfang und Zwecke der Erhebung und Verwendung personenbezogener Daten durch den verantwortlichen Anbieter Brigitte George-Neikes, Josef-Werres-Straße 78, 40668 Meerbusch, ferienhaus.28.am.silbersee@gmail.com, +49 (0)2159 - 51143 auf dieser Website (im folgenden “Angebot”) auf. Die rechtlichen Grundlagen des Datenschutzes finden sich im Bundesdatenschutzgesetz (BDSG) und dem Telemediengesetz (TMG).</p><br>
