added hr for better reading

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
           </section>
             <!--Section: House-->
-
+<hr class="my-5">
           <h2 class="h2-responsive my-5">Best features</h2>
 
           <!--Section: Pictures-->
@@ -246,6 +246,7 @@
 </section>
 <!--/Section: Pictures-->
 
+          <hr class="my-5">
           <!--Section area-->
                     <h2 class="h2-responsive my-5">Die Umgebung</h2>
 
@@ -277,7 +278,7 @@ oder den Edersee an der Edertalsperre (ca. 60 km).</p>
 
             </section>
           <!--Section area-->
-          
+<hr class="my-5">          
           
   <!--Section location-->
           <h2 class="h2-responsive my-5">Anfahrt</h2>
@@ -293,6 +294,7 @@ Parkplätze stehen für ihr Fahrzeug aber im Park in ausreichender Anzahl zur Ve
             </section>
             <!--Section: location-->
 
+          <hr class="my-5">
           <h2 class="h2-responsive my-5">Kontakt und Ferienhaus Adresse</h2>
 
           <!--Section: Contact-->
