--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link href="css/mdb.min.css" rel="stylesheet">
     <!-- Your custom styles (optional) -->
     <link href="css/style.css" rel="stylesheet">
+    <!-- back-to-top -->
+    <script src="js/back-to-top.js"></script>
 </head>
 
 <body>
@@ -79,7 +81,7 @@
 
 <!--Main layout-->
 <main>
-
+<button onclick="topFunction()" id="myBtn" title="Go to top"></button>
   <!--Main layout-->
   <main class="text-center">
       <div class="container">
