--- a/privacy.html
+++ b/privacy.html
@@ -20,6 +20,8 @@
     <link href="css/mdb.min.css" rel="stylesheet">
     <!-- Your custom styles (optional) -->
     <link href="css/style.css" rel="stylesheet">
+    <!-- back-to-top -->
+    <script src="js/back-to-top.js"></script>
 </head>
 
 <body>
