--- a/index.html
+++ b/index.html
@@ -111,6 +111,124 @@
 
           </section>
             <!--Section: House-->
+
+
+            <!--Section: Gallery-->
+            <section id="gallery">
+
+                <!-- Heading -->
+                <h2 class="mb-5 font-weight-bold text-center">Gallery heading</h2>
+
+                <!--Grid row-->
+                <div class="row">
+
+
+                  <!--Grid column-->
+                  <div class="col-md-6">
+
+                      <!--Carousel Wrapper-->
+                      <div id="carousel-example-1z" class="carousel slide carousel-fade" data-ride="carousel">
+                          <!--Indicators-->
+                          <ol class="carousel-indicators">
+                              <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
+                              <li data-target="#carousel-example-1z" data-slide-to="1"></li>
+                              <li data-target="#carousel-example-1z" data-slide-to="2"></li>
+                          </ol>
+                          <!--/.Indicators-->
+                          <!--Slides-->
+                          <div class="carousel-inner z-depth-1-half" role="listbox">
+                              <!--First slide-->
+                              <div class="carousel-item active">
+                                  <img class="d-block w-100" src="/img/house/P1060750-1920.JPG" alt="First slide">
+                              </div>
+                              <!--/First slide-->
+                              <!--Second slide-->
+                              <div class="carousel-item">
+                                  <img class="d-block w-100" src="/img/house/P1060658-1920.JPG" alt="Second slide">
+                              </div>
+                              <!--/Second slide-->
+                              <!--Third slide-->
+                              <div class="carousel-item">
+                                  <img class="d-block w-100" src="/img/house/P1060656-1920.JPG" alt="Third slide">
+                              </div>
+                              <!--/Third slide-->
+                              <!--Fourth slide-->
+                              <div class="carousel-item">
+                                  <img class="d-block w-100" src="/img/house/P1060633-1920.JPG" alt="Fourth slide">
+                              </div>
+                              <!--/Fourth slide-->
+                              <!--Fifth slide-->
+                              <div class="carousel-item">
+                                  <img class="d-block w-100" src="/img/house/P1060768ri-1920.JPG" alt="Fifth slide">
+                              </div>
+                              <!--/Fifth slide-->
+                              <!--Sixth slide-->
+                              <div class="carousel-item">
+                                  <img class="d-block w-100" src="/img/house/P1060741-1920.JPG" alt="Sixth slide">
+                              </div>
+                              <!--/Sixth slide-->
+                              <!--Seventh slide-->
+                              <div class="carousel-item">
+                                  <img class="d-block w-100" src="/img/house/P1060739-1920.JPG" alt="Seventh slide">
+                              </div>
+                              <!--/Seventh slide-->
+                              <!--Eighth slide-->
+                              <div class="carousel-item">
+                                  <img class="d-block w-100" src="/img/house/P1060750-1920.JPG" alt="Eighth slide">
+                              </div>
+                              <!--/Eighth slide-->
+
+
+                          </div>
+                          <!--/.Slides-->
+                          <!--Controls-->
+                          <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="sr-only">Previous</span>
+                          </a>
+                          <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="sr-only">Next</span>
+                          </a>
+                          <!--/.Controls-->
+                      </div>
+                      <!--/.Carousel Wrapper-->
+
+                  </div>
+                  <!--Grid column-->
+
+
+
+                  <!--Grid column-->
+                  <div class="col-md-6">
+
+                      <!--Excerpt-->
+                      <a href="" class="teal-text">
+                          <h6 class="pb-1"><i class="fa fa-heart"></i><strong> Lifestyle </strong></h6>
+                      </a>
+                      <h4 class="mb-3"><strong>Hierg einige Einblicke in das Haus.</strong></h4>
+
+
+                      <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime
+                          placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus et aut officiis
+                          debitis aut rerum.</p>
+                      <p>by <a><strong>Julia Neikes</strong></a>, 16/02/2018</p>
+
+
+                  </div>
+                  <!--Grid column-->
+
+
+                </div>
+                <!--Grid row-->
+
+            </section>
+            <!--Section: Gallery-->
+
+
+
+
+
 <hr class="my-5">
           <h2 class="h2-responsive my-5">Best features</h2>
 
@@ -363,6 +481,14 @@ Parkplätze stehen für ihr Fahrzeug aber im Park in ausreichender Anzahl zur Ve
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
 
+
+     <!-- Carousel options -->
+    <script>
+     $('.carousel').carousel({
+         interval: 1500,
+     })
+    </script>
+
     <!--Google Maps-->
     <script src="https://maps.google.com/maps/api/js?key=AIzaSyCieJ-3ry9BVAB_g47LwXY5Q1GoFaHksgw&callback=initMap"></script>
     <!--Google Maps Settings-->
@@ -390,6 +516,8 @@ Parkplätze stehen für ihr Fahrzeug aber im Park in ausreichender Anzahl zur Ve
 
         google.maps.event.addDomListener(window, 'load', init_map);
  </script>
+
+
 </body>
 
 </html>
