--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           </section>
             <!--Section: House-->
 
-
+<hr class="my-5">
             <!--Section: Gallery-->
             <section id="gallery">
 
@@ -202,9 +202,9 @@
 
                       <!--Excerpt-->
                       <a href="" class="teal-text">
-                          <h6 class="pb-1"><i class="fa fa-heart"></i><strong> Lifestyle </strong></h6>
+                          <h6 class="pb-1"><i class="fa fa-heart"></i><strong>Ferienhaus 28</strong></h6>
                       </a>
-                      <h4 class="mb-3"><strong>Hierg einige Einblicke in das Haus.</strong></h4>
+                      <h4 class="mb-3"><strong>Hier einige Einblicke in das Haus.</strong></h4>
 
 
                       <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime
