--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <section id="gallery">
 
                 <!-- Heading -->
-                <h2 class="mb-5 font-weight-bold text-center">Gallery heading</h2>
+                <h2 class="mb-5 font-weight-bold text-center">Bilder Gallery</h2>
 
                 <!--Grid row-->
                 <div class="row">
