--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
                       <!--Excerpt-->
                       <a href="" class="teal-text">
-                          <h6 class="pb-1"><i class="fa camera-retro"></i><strong>Ferienhaus 28</strong></h6>
+                          <h6 class="pb-1"><i class="fa fa-camera-retro"></i><strong>Ferienhaus 28</strong></h6>
                       </a>
                       <h4 class="mb-3"><strong>Hier einige Einblicke in das Haus.</strong></h4>
 
