fixed errors in file names

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                           <div class="carousel-inner z-depth-1-half" role="listbox">
                               <!--First slide-->
                               <div class="carousel-item active">
-                                  <img class="d-block w-100" src="/img/house/P1060750-1920-1.JPG" alt="First slide">
+                                  <img class="d-block w-100" src="/img/house/P1060750-1920-1.jpg" alt="First slide">
                               </div>
                               <!--/First slide-->
                               <!--Second slide-->
@@ -242,7 +242,7 @@
 
                 <!--Card image-->
                 <div class="view overlay hm-white-slight">
-                    <img src="img/house/P1060750-1920-1.JPG" class="img-fluid" alt="">
+                    <img src="/img/house/P1060750-1920-1.jpg" class="img-fluid" alt="">
                     <a>
                         <div class="mask"></div>
                     </a>
@@ -273,7 +273,7 @@
 
                 <!--Card image-->
                 <div class="view overlay hm-white-slight">
-                    <img src="img/house/P1060633-1920-1.JPG" class="img-fluid" alt="">
+                    <img src="/img/house/P1060633-1920-1.JPG" class="img-fluid" alt="">
                     <a>
                         <div class="mask"></div>
                     </a>
