--- a/privacy.html
+++ b/privacy.html
@@ -59,10 +59,9 @@
     </nav>
 
 <!--Mask-->
-    <div class="view hm-black-strong">
+    <div class="view hm-black-strong ersterartikel">
     <div class="full-bg-img flex-center">
         <ul>
-          <article class="ersterartikel artikel">
             <li>
                 <h1 class="h1-responsive ersterartikel">Datenschutzerklärung</h1>
             </li>
@@ -75,7 +74,6 @@
                 <p class="text-warning"><h5>Widerruf, Änderungen, Berichtigungen und Aktualisierungen</h5></p><p class="text-warning">Der Nutzer hat das Recht, auf Antrag unentgeltlich Auskunft zu erhalten über die personenbezogenen Daten, die über ihn gespeichert wurden. Zusätzlich hat der Nutzer das Recht auf Berichtigung unrichtiger Daten, Sperrung und Löschung seiner personenbezogenen Daten, soweit dem keine gesetzliche Aufbewahrungspflicht entgegensteht.</p><p class="text-warning"><a href="https://datenschutz-generator.de/"><h5>Erstellt mit Datenschutz-Generator.de von RA Dr. Thomas Schwenke</h5></a></p>
 
             </li>
-          </article>
         </ul>
     </div>
 </div>
