--- a/privacy.html
+++ b/privacy.html
@@ -59,7 +59,17 @@
     </nav>
 
 <!--Mask-->
-    <div class="view hm-black-strong ersterartikel">
+<!--/.Mask-->
+
+</header>
+<!--Main Navigation-->
+
+</header>
+<!--Main Navigation-->
+
+<!--Main layout-->
+<main>
+    <div class="view hm-black-strong">
     <div class="full-bg-img flex-center">
         <ul>
             <li>
@@ -77,16 +87,6 @@
         </ul>
     </div>
 </div>
-<!--/.Mask-->
-
-</header>
-<!--Main Navigation-->
-
-</header>
-<!--Main Navigation-->
-
-<!--Main layout-->
-<main>
 
 
 </main>
