--- a/imprint.html
+++ b/imprint.html
@@ -70,7 +70,7 @@
 
             <!--Section: About-->
             <section id="about" class="text-center">
-			<h1 class="h1-responsive">Impressum</h1>
+			<h1 class="h1-responsive ersterartikel">Impressum</h1>
 
 
 
