--- a/privacy.html
+++ b/privacy.html
@@ -29,7 +29,6 @@
 <!--Main Navigation-->
 <header>
 
-
 <!--Main Navigation-->
 <header>
 
@@ -40,13 +39,13 @@
             aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item ">
+                <li class="nav-item">
                     <a class="nav-link" href="index.html">Hauptseite<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="booking.html">Buchen</a>
                 </li>
-                <li class="nav-item  active">
+                <li class="nav-item active">
                     <a class="nav-link" href="privacy.html">Datenschutz</a>
                 </li>
                 <li class="nav-item">
@@ -58,6 +57,7 @@
         </div>
         </div>
     </nav>
+
 <!--Mask-->
     <div class="view hm-black-strong">
     <div class="full-bg-img flex-center">
@@ -80,7 +80,7 @@
                 <p class="text-warning"><h5>Widerruf, Änderungen, Berichtigungen und Aktualisierungen</h5></p><p class="text-warning">Der Nutzer hat das Recht, auf Antrag unentgeltlich Auskunft zu erhalten über die personenbezogenen Daten, die über ihn gespeichert wurden. Zusätzlich hat der Nutzer das Recht auf Berichtigung unrichtiger Daten, Sperrung und Löschung seiner personenbezogenen Daten, soweit dem keine gesetzliche Aufbewahrungspflicht entgegensteht.</p><p class="text-warning"><a href="https://datenschutz-generator.de/"><h5>Erstellt mit Datenschutz-Generator.de von RA Dr. Thomas Schwenke</h5></a></p>
 
             </section>
-            <!--Section: About-->
+            <!--Section: privacy-->
         </div>
     </main>
 <!--Main layout-->
@@ -93,20 +93,15 @@
 </header>
 <!--Main Navigation-->
 
+</header>
+<!--Main Navigation-->
 
 <!--Main layout-->
 <main>
 
-
-
 </main>
 <!--Main layout-->
 
-</header>
-<!--Main Navigation-->
-
-</header>
-<!--Main Navigation-->
 
 <!--Footer-->
 <footer>
