--- a/privacy.html
+++ b/privacy.html
@@ -59,7 +59,7 @@
     </nav>
 
 <!--Mask-->
-    <div class="view hm-black-slight">
+    <div class="view hm-black-strong">
     <div class="full-bg-img flex-center">
         <ul>
             <li>
@@ -89,9 +89,6 @@
           <h2 class="h2-responsive my-5">Datenschutzerklärung</h2>
             <!--Section: privacy-->
             <section id="privacy" class="text-center">
-			<li>
-                <h1 class="h1-responsive ersterartikel">Datenschutzerklärung</h1>
-            </li>
             <li>
                 <p class="text-warning"><h5>Geltungsbereich</h5></p><p class="text-warning">Diese Datenschutzerklärung klärt Nutzer über die Art, den Umfang und Zwecke der Erhebung und Verwendung personenbezogener Daten durch den verantwortlichen Anbieter Brigitte George-Neikes, Josef-Werres-Straße 78, 40668 Meerbusch, ferienhaus.28.am.silbersee@gmail.com, +49 (0)2159 - 51143 auf dieser Website (im folgenden “Angebot”) auf. Die rechtlichen Grundlagen des Datenschutzes finden sich im Bundesdatenschutzgesetz (BDSG) und dem Telemediengesetz (TMG).</p><br>
                 <p class="text-warning"><h5>Zugriffsdaten/ Server-Logfiles</h5></p><p class="text-warning"><span class="ts-muster-content">Der Anbieter (beziehungsweise sein Webspace-Provider) erhebt Daten über jeden Zugriff auf das Angebot (so genannte Serverlogfiles). Zu den Zugriffsdaten gehören: Name der abgerufenen Webseite, Datei, Datum und Uhrzeit des Abrufs, übertragene Datenmenge, Meldung über erfolgreichen Abruf, Browsertyp nebst Version, das Betriebssystem des Nutzers, Referrer URL (die zuvor besuchte Seite), IP-Adresse und der anfragende Provider.Der Anbieter verwendet die Protokolldaten nur für statistische Auswertungen zum Zweck des Betriebs, der Sicherheit und der Optimierung des Angebotes. Der Anbieterbehält sich jedoch vor, die Protokolldaten nachträglich zu überprüfen, wenn aufgrund konkreter Anhaltspunkte der berechtigte Verdacht einer rechtswidrigen Nutzung besteht.</span></p><br>
