fixed some error

--- a/privacy.html
+++ b/privacy.html
@@ -120,7 +120,7 @@ Link zum Impressum: <a href="https://ferienhaus28amsilbersee.github.io/imprint.h
 - Meta-/Kommunikationsdaten (z.B., Geräte-Informationen, IP-Adressen). <br />
 </p>
 
-<h4>Kategorien betroffener Personen<h4>
+<h4>Kategorien betroffener Personen</h4>
 
 <p>Besucher und Nutzer des Onlineangebotes (Nachfolgend bezeichnen wir die betroffenen Personen zusammenfassend auch als „Nutzer“).</p>
 
