changed privacy style

--- a/privacy.html
+++ b/privacy.html
@@ -97,7 +97,10 @@
 
 <!--Main layout-->
 <main>
-
+<button onclick="topFunction()" id="myBtn" title="Go to top"></button>
+  <!--Main layout-->
+  <main class="text-center">
+      <div class="container">
         <ul>
             <ul class="list-unstyled">
             <li>
@@ -235,7 +238,8 @@ Link zum Impressum: <a href="https://ferienhaus28amsilbersee.github.io/imprint.h
                 </li>
             </ul>
         </ul>
-
+</div>
+</main>
 
 
 <!--Main layout-->
