--- a/privacy.html
+++ b/privacy.html
@@ -99,13 +99,14 @@
 <main>
 <button onclick="topFunction()" id="myBtn" title="Go to top"></button>
   <!--Main layout-->
-  <main class="text-center">
+  <main class="text">
       <div class="container">
         <ul>
             <ul class="list-unstyled">
             <li>
-
+<p>
 <h4>Verantwortlicher</h4>
+</p>
 <p>
 Brigitte George-Neikes <br />
 Josef-Werres-Straße 78 <br />
