--- a/imprint.html
+++ b/imprint.html
@@ -67,9 +67,11 @@
   <!--Main layout-->
     <main class="text-center">
         <div class="container">
+		            <!--Section: About-->
+            <section id="aboutstart" class="text-center">
 
 			<h1 class="h1-responsive ersterartikel">Impressum</h1>
-
+			</section>
         </div>
     </main>
 <!--Main layout-->
@@ -87,6 +89,7 @@
 
 <!--Main layout-->
 <main>
+<button onclick="topFunction()" id="myBtn" title="Go to top"></button>
  <main class="text-center">
         <div class="container">
 
