fixed setting for test textx not changed by Julia Neikes

--- a/index.html
+++ b/index.html
@@ -199,10 +199,8 @@
                       <h4 class="mb-3"><strong>Hier einige Einblicke in das Haus.</strong></h4>
 
 
-                      <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime
-                          placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus et aut officiis
-                          debitis aut rerum.</p>
-                      <p>by <a><strong>Julia Neikes</strong></a>, 16/02/2018</p>
+                      <p>Weitere Photos sind ind der Gallerie zu sehen.</p>
+                      <p>by <a><strong>Joerg Neikes</strong></a>, 08/05/2022</p>
 
 
                   </div>
