declared pictures not done by Julia

--- a/index.html
+++ b/index.html
@@ -242,11 +242,10 @@
                 <!--Card content-->
                 <div class="card-body">
                     <!--Title-->
-                    <h4 class="card-title">Card title</h4>
+                    <h4 class="card-title">Ferienhaus 28 am Silbersee</h4>
                     <hr>
                     <!--Text-->
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident fuga animi architecto
-                        dolores dicta cum quo velit.</p>
+                    <p class="card-text">Die Frontansicht.</p>
                 </div>
                 <!--/.Card content-->
 
@@ -273,11 +272,10 @@
                 <!--Card content-->
                 <div class="card-body">
                     <!--Title-->
-                    <h4 class="card-title">Card title</h4>
+                    <h4 class="card-title">Schlafzimmer unten.</h4>
                     <hr>
                     <!--Text-->
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident fuga animi architecto
-                        dolores dicta cum quo velit.</p>
+                    <p class="card-text">Das größere Schlafzimmer im unteren Berich.</p>
                 </div>
                 <!--/.Card content-->
 
@@ -305,11 +303,10 @@
                 <!--Card content-->
                 <div class="card-body">
                     <!--Title-->
-                    <h4 class="card-title">Card title</h4>
+                    <h4 class="card-title">Das Einzelbett oben.</h4>
                     <hr>
                     <!--Text-->
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident fuga animi architecto
-                        dolores dicta cum quo velit.</p>
+                    <p class="card-text">Lampen und ein Abstelltisch sind vorhanden..</p>
                 </div>
                 <!--/.Card content-->
 
@@ -336,11 +333,10 @@
                 <!--Card content-->
                 <div class="card-body">
                     <!--Title-->
-                    <h4 class="card-title">Card title</h4>
+                    <h4 class="card-title">Das Doppelbett oben.</h4>
                     <hr>
                     <!--Text-->
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident fuga animi architecto
-                        dolores dicta cum quo velit.</p>
+                    <p class="card-text">Lampen und Steckdosen vorhanden. Ein Waschbecken ist direkt verfügbar..</p>
                 </div>
                 <!--/.Card content-->
 
