--- a/privacy.html
+++ b/privacy.html
@@ -42,6 +42,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="booking.html">Buchen</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="area.html">Umgebung</a>
+                </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="privacy.html">Datenschutz</a>
                 </li>
