--- a/imprint.html
+++ b/imprint.html
@@ -39,7 +39,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Hauptseite<span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item
+                <li class="nav-item">
                     <a class="nav-link" href="booking.html">Buchen</a>
                 </li>
                 <li class="nav-item">
