--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                       <h4 class="mb-3"><strong>Hier einige Einblicke in das Haus.</strong></h4>
 
 
-                      <p>Weitere Photos sind ind der Gallerie zu sehen.</p>
+                      <p>Weitere Photos sind ind der Fokus-Ansicht zu sehen.</p>
                       <p>by <a><strong>Joerg Neikes</strong></a>, 08/05/2022</p>
 
 
@@ -221,7 +221,7 @@
 
 
 <hr class="my-5">
-          <h2 class="h2-responsive my-5">Best features</h2>
+          <h2 class="h2-responsive my-5">Fokus-Ansicht</h2>
 
           <!--Section: Pictures-->
 <section id="best-features">
