--- a/booking.html
+++ b/booking.html
@@ -85,10 +85,8 @@
 
             <!--Section: About-->
             <section id="about" class="text-center">
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed eaque ipsum totam quisquam eum tenetur perferendis rem incidunt sapiente perspiciatis tempora, aliquam, eius autem nisi quas, cumque distinctio saepe ab.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed eaque ipsum totam quisquam eum tenetur perferendis rem incidunt sapiente perspiciatis tempora, aliquam, eius autem nisi quas, cumque distinctio saepe ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed eaque ipsum totam quisquam eum tenetur perferendis rem incidunt sapiente perspiciatis tempora, aliquam, eius autem nisi quas, cumque distinctio saepe ab.</p>
-
+                <p>Hier sind die aktuellen Preise für das jetzige Jahr zu finden.</p>
+                <p><a href="/img/prices/">Preisliste 2022</a></p>
             </section>
             <!--Section: About-->
 
